tests/valid_pascal_programs/if_with_not.pas
program IfWithNot;
begin
  if not (111<222) then
    writeln('true')
  else
    writeln('false');
end.
